fixed spacing issues, now looks aligned on mobile & desktop

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,11 @@
  * Author: Adrien P.
  */
 
-html {
+/* *, *::before, *::after {
+    box-sizing: border-box;
+} */
+
+ html {
     scroll-behavior: smooth;
 }
 
@@ -58,13 +62,14 @@ footer {
 .scroll-container {
     flex: 1;
     margin: 0;
+    padding-top: 0;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
 }
 
 .section {
     scroll-snap-align: start;  
-    height: 100vh;       
+    height: 100%;       
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +117,7 @@ footer {
 }
 
 .skills-list {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -123,7 +128,7 @@ footer {
 }
 
 .contact-link-cont {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -145,11 +150,16 @@ footer {
     word-wrap: normal;    
 }
 
-.projects-desc li {
+.projects-desc {
     list-style: none;
     text-align: center;
-    padding-bottom: 15px;
+    padding-left: 0;
+    margin: 0;
     font-size: 17.5px;
+}
+
+.projects-desc li {
+    padding-bottom: 15px;
 }
 
 .skills-desc li {
@@ -168,4 +178,60 @@ h2 a:hover {
 
 .contact-link a {
     text-decoration: none;
+}
+
+@media screen and (max-width: 500px) {
+    .section {
+        scroll-snap-align: start;  
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+
+    .about {
+        line-height: 1.3;
+        max-width: 900px;    
+        margin: 0 auto;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .contact-link {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        padding: 10px;
+        margin: 0;
+        justify-content: center;
+}
+
+    .about p {
+        font-size: 15px;
+    }
+
+    .skills-desc {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 30px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        justify-content: center;
+}
+
+    .skills-list {
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .skills-imgs {
+        height: 40px;
+        width: auto;
+    }
 }
